# nocta-ui-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  bun-monorepo-example.md  flowchart.mmd  new-config.md  package-lock.json  package.json  registry.json  tsconfig.json  tsup.config.ts
.github/workflows/: build-cli.yml  test-build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  reporter.rs  util.rs
crates/cli/src/commands/: add.rs  cache.rs  init.rs  list.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  config.rs  constants.rs  deps.rs  framework.rs  fs.rs  lib.rs  paths.rs  registry.rs  rollback.rs  tailwind.rs  types.rs  workspace.rs
docs/: add.md  config.md  init.md  list.md  monorepo.md
js/: README.md  package.json
registry/: components.json  registry.json  schema.json
registry/css/: index.css
registry/icons/: icons.ts
scripts/: build-and-link.sh
src/: cli.ts  types.ts
src/commands/: add.ts  init.ts  list.ts
src/utils/: cache.ts  config.ts  deps.ts  files.ts  framework.ts  fs.ts  index.ts  paths.ts  registry.ts  rollback.ts  tailwind.ts
