[workspace]
members = [
    "crates/cli",
    "crates/core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Marek Jóźwiak <hexthecoder@gmail.com>"]
repository = "https://github.com/nocta-ui/nocta-ui-cli"
description = "Next-generation Nocta UI CLI tooling"
version = "0.3.1"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"
thiserror = "2.0.17"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
directories = "6.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
base64 = "0.22.1"
dialoguer = "0.11.0"
indicatif = "0.17.11"
once_cell = "1.21.3"
semver = "1.0.27"
regex = "1.12.2"
pathdiff = "0.2.3"
crc32fast = "1.5.0"
tempfile = "3.23.0"
futures = "0.3.31"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
