[package]
name = "nocta_core"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow.workspace = true
directories.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
ureq.workspace = true
base64.workspace = true
once_cell.workspace = true
semver.workspace = true
